// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getComponentCss() should return correct css for size: "inherit" and theme dark 1`] = `
":host {
  display: inline-flex !important;
  vertical-align: top !important;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
svg {
  display: block;
  position: relative;
  fill: none;
  transform: translate3d(0,0,0);
  animation: rotate var(--p-animation-duration, 2s) linear infinite;
}
circle:first-child {
  stroke: #88898C;
  animation: rotate var(--p-animation-duration, 2s) linear infinite;
}
circle:last-child {
  transform-origin: 0 0;
  animation: dash var(--p-animation-duration, 2s) ease-in-out infinite;
  stroke: #FBFCFF;
  stroke-dasharray: 57;
  stroke-linecap: round;
}
@keyframes rotate {
  0% {
    transform: rotateZ(0deg);
  }
  100% {
    transform: rotateZ(360deg);
  }
}
@keyframes dash {
  0% {
    stroke-dashoffset: 57;
    transform: rotateZ(0);
  }
  50%, 75% {
    stroke-dashoffset: 20;
    transform: rotateZ(80deg);
  }
  100% {
    stroke-dashoffset: 57;
    transform: rotateZ(360deg);
  }
}
  .root {
    display: block;
    height: inherit;
    width: inherit;
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    stroke-width: 1.5;
  }
  .sr-only {
    position: absolute;
    width: 0;
    height: 1px;
    text-indent: -999999px;
  }"
`;

exports[`getComponentCss() should return correct css for size: "inherit" and theme light 1`] = `
":host {
  display: inline-flex !important;
  vertical-align: top !important;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
svg {
  display: block;
  position: relative;
  fill: none;
  transform: translate3d(0,0,0);
  animation: rotate var(--p-animation-duration, 2s) linear infinite;
}
circle:first-child {
  stroke: #6B6D70;
  animation: rotate var(--p-animation-duration, 2s) linear infinite;
}
circle:last-child {
  transform-origin: 0 0;
  animation: dash var(--p-animation-duration, 2s) ease-in-out infinite;
  stroke: #010205;
  stroke-dasharray: 57;
  stroke-linecap: round;
}
@keyframes rotate {
  0% {
    transform: rotateZ(0deg);
  }
  100% {
    transform: rotateZ(360deg);
  }
}
@keyframes dash {
  0% {
    stroke-dashoffset: 57;
    transform: rotateZ(0);
  }
  50%, 75% {
    stroke-dashoffset: 20;
    transform: rotateZ(80deg);
  }
  100% {
    stroke-dashoffset: 57;
    transform: rotateZ(360deg);
  }
}
  .root {
    display: block;
    height: inherit;
    width: inherit;
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    stroke-width: 1.5;
  }
  .sr-only {
    position: absolute;
    width: 0;
    height: 1px;
    text-indent: -999999px;
  }"
`;

exports[`getComponentCss() should return correct css for size: "large" and theme dark 1`] = `
":host {
  display: inline-flex !important;
  vertical-align: top !important;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
svg {
  display: block;
  position: relative;
  fill: none;
  transform: translate3d(0,0,0);
  animation: rotate var(--p-animation-duration, 2s) linear infinite;
}
circle:first-child {
  stroke: #88898C;
  animation: rotate var(--p-animation-duration, 2s) linear infinite;
}
circle:last-child {
  transform-origin: 0 0;
  animation: dash var(--p-animation-duration, 2s) ease-in-out infinite;
  stroke: #FBFCFF;
  stroke-dasharray: 57;
  stroke-linecap: round;
}
@keyframes rotate {
  0% {
    transform: rotateZ(0deg);
  }
  100% {
    transform: rotateZ(360deg);
  }
}
@keyframes dash {
  0% {
    stroke-dashoffset: 57;
    transform: rotateZ(0);
  }
  50%, 75% {
    stroke-dashoffset: 20;
    transform: rotateZ(80deg);
  }
  100% {
    stroke-dashoffset: 57;
    transform: rotateZ(360deg);
  }
}
  .root {
    display: block;
    height: 104px;
    width: 104px;
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    stroke-width: 1.5;
  }
  .sr-only {
    position: absolute;
    width: 0;
    height: 1px;
    text-indent: -999999px;
  }"
`;

exports[`getComponentCss() should return correct css for size: "large" and theme light 1`] = `
":host {
  display: inline-flex !important;
  vertical-align: top !important;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
svg {
  display: block;
  position: relative;
  fill: none;
  transform: translate3d(0,0,0);
  animation: rotate var(--p-animation-duration, 2s) linear infinite;
}
circle:first-child {
  stroke: #6B6D70;
  animation: rotate var(--p-animation-duration, 2s) linear infinite;
}
circle:last-child {
  transform-origin: 0 0;
  animation: dash var(--p-animation-duration, 2s) ease-in-out infinite;
  stroke: #010205;
  stroke-dasharray: 57;
  stroke-linecap: round;
}
@keyframes rotate {
  0% {
    transform: rotateZ(0deg);
  }
  100% {
    transform: rotateZ(360deg);
  }
}
@keyframes dash {
  0% {
    stroke-dashoffset: 57;
    transform: rotateZ(0);
  }
  50%, 75% {
    stroke-dashoffset: 20;
    transform: rotateZ(80deg);
  }
  100% {
    stroke-dashoffset: 57;
    transform: rotateZ(360deg);
  }
}
  .root {
    display: block;
    height: 104px;
    width: 104px;
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    stroke-width: 1.5;
  }
  .sr-only {
    position: absolute;
    width: 0;
    height: 1px;
    text-indent: -999999px;
  }"
`;

exports[`getComponentCss() should return correct css for size: "medium" and theme dark 1`] = `
":host {
  display: inline-flex !important;
  vertical-align: top !important;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
svg {
  display: block;
  position: relative;
  fill: none;
  transform: translate3d(0,0,0);
  animation: rotate var(--p-animation-duration, 2s) linear infinite;
}
circle:first-child {
  stroke: #88898C;
  animation: rotate var(--p-animation-duration, 2s) linear infinite;
}
circle:last-child {
  transform-origin: 0 0;
  animation: dash var(--p-animation-duration, 2s) ease-in-out infinite;
  stroke: #FBFCFF;
  stroke-dasharray: 57;
  stroke-linecap: round;
}
@keyframes rotate {
  0% {
    transform: rotateZ(0deg);
  }
  100% {
    transform: rotateZ(360deg);
  }
}
@keyframes dash {
  0% {
    stroke-dashoffset: 57;
    transform: rotateZ(0);
  }
  50%, 75% {
    stroke-dashoffset: 20;
    transform: rotateZ(80deg);
  }
  100% {
    stroke-dashoffset: 57;
    transform: rotateZ(360deg);
  }
}
  .root {
    display: block;
    height: 72px;
    width: 72px;
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    stroke-width: 1.5;
  }
  .sr-only {
    position: absolute;
    width: 0;
    height: 1px;
    text-indent: -999999px;
  }"
`;

exports[`getComponentCss() should return correct css for size: "medium" and theme light 1`] = `
":host {
  display: inline-flex !important;
  vertical-align: top !important;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
svg {
  display: block;
  position: relative;
  fill: none;
  transform: translate3d(0,0,0);
  animation: rotate var(--p-animation-duration, 2s) linear infinite;
}
circle:first-child {
  stroke: #6B6D70;
  animation: rotate var(--p-animation-duration, 2s) linear infinite;
}
circle:last-child {
  transform-origin: 0 0;
  animation: dash var(--p-animation-duration, 2s) ease-in-out infinite;
  stroke: #010205;
  stroke-dasharray: 57;
  stroke-linecap: round;
}
@keyframes rotate {
  0% {
    transform: rotateZ(0deg);
  }
  100% {
    transform: rotateZ(360deg);
  }
}
@keyframes dash {
  0% {
    stroke-dashoffset: 57;
    transform: rotateZ(0);
  }
  50%, 75% {
    stroke-dashoffset: 20;
    transform: rotateZ(80deg);
  }
  100% {
    stroke-dashoffset: 57;
    transform: rotateZ(360deg);
  }
}
  .root {
    display: block;
    height: 72px;
    width: 72px;
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    stroke-width: 1.5;
  }
  .sr-only {
    position: absolute;
    width: 0;
    height: 1px;
    text-indent: -999999px;
  }"
`;

exports[`getComponentCss() should return correct css for size: "small" and theme dark 1`] = `
":host {
  display: inline-flex !important;
  vertical-align: top !important;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
svg {
  display: block;
  position: relative;
  fill: none;
  transform: translate3d(0,0,0);
  animation: rotate var(--p-animation-duration, 2s) linear infinite;
}
circle:first-child {
  stroke: #88898C;
  animation: rotate var(--p-animation-duration, 2s) linear infinite;
}
circle:last-child {
  transform-origin: 0 0;
  animation: dash var(--p-animation-duration, 2s) ease-in-out infinite;
  stroke: #FBFCFF;
  stroke-dasharray: 57;
  stroke-linecap: round;
}
@keyframes rotate {
  0% {
    transform: rotateZ(0deg);
  }
  100% {
    transform: rotateZ(360deg);
  }
}
@keyframes dash {
  0% {
    stroke-dashoffset: 57;
    transform: rotateZ(0);
  }
  50%, 75% {
    stroke-dashoffset: 20;
    transform: rotateZ(80deg);
  }
  100% {
    stroke-dashoffset: 57;
    transform: rotateZ(360deg);
  }
}
  .root {
    display: block;
    height: 48px;
    width: 48px;
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    stroke-width: 1.5;
  }
  .sr-only {
    position: absolute;
    width: 0;
    height: 1px;
    text-indent: -999999px;
  }"
`;

exports[`getComponentCss() should return correct css for size: "small" and theme light 1`] = `
":host {
  display: inline-flex !important;
  vertical-align: top !important;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
svg {
  display: block;
  position: relative;
  fill: none;
  transform: translate3d(0,0,0);
  animation: rotate var(--p-animation-duration, 2s) linear infinite;
}
circle:first-child {
  stroke: #6B6D70;
  animation: rotate var(--p-animation-duration, 2s) linear infinite;
}
circle:last-child {
  transform-origin: 0 0;
  animation: dash var(--p-animation-duration, 2s) ease-in-out infinite;
  stroke: #010205;
  stroke-dasharray: 57;
  stroke-linecap: round;
}
@keyframes rotate {
  0% {
    transform: rotateZ(0deg);
  }
  100% {
    transform: rotateZ(360deg);
  }
}
@keyframes dash {
  0% {
    stroke-dashoffset: 57;
    transform: rotateZ(0);
  }
  50%, 75% {
    stroke-dashoffset: 20;
    transform: rotateZ(80deg);
  }
  100% {
    stroke-dashoffset: 57;
    transform: rotateZ(360deg);
  }
}
  .root {
    display: block;
    height: 48px;
    width: 48px;
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    stroke-width: 1.5;
  }
  .sr-only {
    position: absolute;
    width: 0;
    height: 1px;
    text-indent: -999999px;
  }"
`;

exports[`getComponentCss() should return correct css for size: {"base":"medium","xs":"small","s":"medium","m":"small","l":"medium","xl":"small"} and theme dark 1`] = `
":host {
  display: inline-flex !important;
  vertical-align: top !important;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
svg {
  display: block;
  position: relative;
  fill: none;
  transform: translate3d(0,0,0);
  animation: rotate var(--p-animation-duration, 2s) linear infinite;
}
circle:first-child {
  stroke: #88898C;
  animation: rotate var(--p-animation-duration, 2s) linear infinite;
}
circle:last-child {
  transform-origin: 0 0;
  animation: dash var(--p-animation-duration, 2s) ease-in-out infinite;
  stroke: #FBFCFF;
  stroke-dasharray: 57;
  stroke-linecap: round;
}
@keyframes rotate {
  0% {
    transform: rotateZ(0deg);
  }
  100% {
    transform: rotateZ(360deg);
  }
}
@keyframes dash {
  0% {
    stroke-dashoffset: 57;
    transform: rotateZ(0);
  }
  50%, 75% {
    stroke-dashoffset: 20;
    transform: rotateZ(80deg);
  }
  100% {
    stroke-dashoffset: 57;
    transform: rotateZ(360deg);
  }
}
  .root {
    display: block;
    height: 72px;
    width: 72px;
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    stroke-width: 1.5;
  }
  .sr-only {
    position: absolute;
    width: 0;
    height: 1px;
    text-indent: -999999px;
  }
@media(min-width:480px) {
    .root {
      height: 48px;
      width: 48px;
    }
}

@media(min-width:760px) {
    .root {
      height: 72px;
      width: 72px;
    }
}

@media(min-width:1000px) {
    .root {
      height: 48px;
      width: 48px;
    }
}

@media(min-width:1300px) {
    .root {
      height: 72px;
      width: 72px;
    }
}

@media(min-width:1760px) {
    .root {
      height: 48px;
      width: 48px;
    }
}
"
`;

exports[`getComponentCss() should return correct css for size: {"base":"medium","xs":"small","s":"medium","m":"small","l":"medium","xl":"small"} and theme light 1`] = `
":host {
  display: inline-flex !important;
  vertical-align: top !important;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
svg {
  display: block;
  position: relative;
  fill: none;
  transform: translate3d(0,0,0);
  animation: rotate var(--p-animation-duration, 2s) linear infinite;
}
circle:first-child {
  stroke: #6B6D70;
  animation: rotate var(--p-animation-duration, 2s) linear infinite;
}
circle:last-child {
  transform-origin: 0 0;
  animation: dash var(--p-animation-duration, 2s) ease-in-out infinite;
  stroke: #010205;
  stroke-dasharray: 57;
  stroke-linecap: round;
}
@keyframes rotate {
  0% {
    transform: rotateZ(0deg);
  }
  100% {
    transform: rotateZ(360deg);
  }
}
@keyframes dash {
  0% {
    stroke-dashoffset: 57;
    transform: rotateZ(0);
  }
  50%, 75% {
    stroke-dashoffset: 20;
    transform: rotateZ(80deg);
  }
  100% {
    stroke-dashoffset: 57;
    transform: rotateZ(360deg);
  }
}
  .root {
    display: block;
    height: 72px;
    width: 72px;
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    stroke-width: 1.5;
  }
  .sr-only {
    position: absolute;
    width: 0;
    height: 1px;
    text-indent: -999999px;
  }
@media(min-width:480px) {
    .root {
      height: 48px;
      width: 48px;
    }
}

@media(min-width:760px) {
    .root {
      height: 72px;
      width: 72px;
    }
}

@media(min-width:1000px) {
    .root {
      height: 48px;
      width: 48px;
    }
}

@media(min-width:1300px) {
    .root {
      height: 72px;
      width: 72px;
    }
}

@media(min-width:1760px) {
    .root {
      height: 48px;
      width: 48px;
    }
}
"
`;
